Skip virtual collections to avoid accidentaly loading a search collection.

Otherwise it can happen that huge amount of mails are loaded into memory just to
be discarded (2gb korgac anyone?).

I noticed this in korgac, korganizer, and kmail when trying to open invitations.

The reason were 60000 email in my Last Search folder.

BUG: 317120